--- a/src/components/Modal.module.scss
+++ b/src/components/Modal.module.scss
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   padding: 4rem;
   background-color: rgba(0, 0, 0, 0%);
+  overflow-y: auto;
   pointer-events: none;
   transition: background-color 0.2s ease;
 
